--- a/helper/src/main/resources/views/rolemenus/admin.html
+++ b/helper/src/main/resources/views/rolemenus/admin.html
@@ -35,4 +35,10 @@
 		<span class="menu-text">任务列表</span>
 	</a>
 </li>
+<li ${active== "express-list" ? "class='active'" : ""}>
+	<a href="${ctxPath}/express/list">
+		<i class="icon-dashboard"></i>
+		快递列表
+	</a>
+</li>
 
