--- a/helper/src/main/resources/views/rolemenus/pdd_role.html
+++ b/helper/src/main/resources/views/rolemenus/pdd_role.html
@@ -15,3 +15,9 @@
 		订单列表
 	</a>
 </li>
+<li ${active== "express-list" ? "class='active'" : ""}>
+	<a href="${ctxPath}/express/list">
+		<i class="icon-dashboard"></i>
+		快递列表
+	</a>
+</li>
