--- a/helper/src/main/resources/views/express/add.html
+++ b/helper/src/main/resources/views/express/add.html
@@ -134,9 +134,7 @@
 							<div class="form-group">
 								<label class="col-sm-2 control-label"> 备注 </label>
 								<div class="col-sm-10">
-								   <textarea rows="5" cols="30"  name="remark" placeholder="请输入备注" class="form-control">
-								   ${expressDO.remark!}
-								   </textarea>
+								   <textarea rows="3" name="remark" placeholder="请输入备注"  class="form-control emptyval">${expressDO.remark!}</textarea>
 								</div>
 							</div>
 							<div class="hr-line-dashed"></div>
