--- a/helper/src/main/resources/views/express/edit.html
+++ b/helper/src/main/resources/views/express/edit.html
@@ -142,9 +142,7 @@
 							<div class="form-group">
 								<label class="col-sm-2 control-label"> 备注 </label>
 								<div class="col-sm-10">
-								   <textarea rows="10" cols="30"  name="remark"  placeholder="请输入备注" class="form-control">
-								   ${expressDO.remark!}
-								   </textarea>
+								  <textarea rows="3" name="remark" placeholder="请输入备注"  class="form-control emptyval">${expressDO.remark!}</textarea>
 								</div>
 							</div>
 	                  <div class="form-group">
