添加过滤数字

--- a/helper/src/main/resources/views/include/_navbar.html
+++ b/helper/src/main/resources/views/include/_navbar.html
@@ -31,7 +31,7 @@
 				<li >
 					
 					<a data-toggle="dropdown" href="#" class="dropdown-toggle">
-						欢迎光临, ${currentUser.username!}
+						欢迎${currentUser.filtrationNumber!}光临, ${currentUser.username!}
 						<i class="icon-caret-down"></i>
 					</a>
 
