--- a/helper/src/main/resources/views/order/listjson.html
+++ b/helper/src/main/resources/views/order/listjson.html
@@ -98,7 +98,7 @@
 						</div>
 						<div class="col-md-3 form-group  m-t-xs">
 							<input type="text" class="input-sm form-control"
-								id="filterPhones" name="filterPhones" value=""
+								id="filterPhones" name="filterPhones" value="${filterPhones!user.getUser().filtrationNumber}"
 								placeholder="请输入过滤手机号185********,186*********">
 						</div>
 						<div class="form-group col-md-4 m-t-xs " id="data_5">
