--- a/helper/src/main/resources/views/rolemenus/pdd_role.html
+++ b/helper/src/main/resources/views/rolemenus/pdd_role.html
@@ -21,3 +21,9 @@
 		快递列表
 	</a>
 </li>
+<li ${active== "good-list" ? "class='active'" : ""}>
+	<a href="${ctxPath}/good/list">
+		<i class="icon-dashboard"></i>
+		商品列表
+	</a>
+</li>
