--- a/helper/src/main/resources/views/order/listjson.html
+++ b/helper/src/main/resources/views/order/listjson.html
@@ -94,6 +94,9 @@
 								class="form-control input-s-sm inline input-sm">
 								<option value="">－－状态－－</option>
 								<option value="1">未发货</option>
+								<option value="2">已发货待签收</option>
+								<option value="3">已签收</option>
+								<option value="5">全部</option>
 							</select>
 						</div>
 						<div class="col-md-3 form-group  m-t-xs">
@@ -112,6 +115,12 @@
 						<input type="text" class="input-sm form-control"
 								id="filterAddress" name="filterAddress" value="A"
 								placeholder="请输入过滤地址包含内容">
+					
+						</div>
+						<div class="col-md-3 form-group  m-t-xs">
+						<input type="text" class="input-sm form-control"
+								id="filterName" name="filterName" value=""
+								placeholder="请输入过滤姓名">
 					
 						</div>
 						<div class="form-group col-md-4 m-t-xs " id="data_5">
@@ -440,8 +449,13 @@
                     	  if($("#filterAddress").val()&&order_info.address.indexOf($("#filterAddress").val()) != -1){
                     		  continue; 
                     	  }
+                    	  
+                    	  if($("#filterName").val()&&isContains($("#filterName").val(),order_info.receiver_name)){
+                    		  continue; 
+                    	  }
+                    	  
                     	  item_list=order_info.item_list;
-                    	  console.log(order_info.address);
+                    	  console.log("filterName"+$("#filterName").val()+  order_info.receiver_name+ isContains($("#filterName").val(),order_info.receiver_name));
                     	  for(var j=0;j<item_list.length;j++){
                     		 
                     		  lists=goodIdsMap.get(item_list[j].goods_id);
@@ -459,10 +473,10 @@
                     		  goodsIdOuterIdSpec.goodsCount=item_list[j].goods_count+goodsIdOuterIdSpec.goodsCount;
                     	  }                    	             	  
                   	   } 
-                  		console.log("goodIdsMap"+goodIdsMap.size());
+                  		/* console.log("goodIdsMap"+goodIdsMap.size());
                   		console.log("outerSpecMap"+outerSpecMap.size()); 
                   		console.log("goodIdsMap"+goodIdsMap.get(goodIdsMap.keySet()[0]).get(0).goodsImg);
-                  		console.log("goodIdsMap"+goodIdsMap.get(goodIdsMap.keySet()[0]).get(0));
+                  		console.log("goodIdsMap"+goodIdsMap.get(goodIdsMap.keySet()[0]).get(0)); */
                   		var TRTD="";
                   		var goodList=null;
                   		GoodRecord=[];
